# beeagi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  REPOSITORY_CONFIG.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
backend/: Dockerfile  README.md  README.zh-CN.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py  security.py
backend/app/api/routes/: evolution.py  llm.py  skills.py  tasks.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  evolution.py  feedback.py  skill.py  task.py
backend/app/schemas/: common.py  evolution.py  feedback.py  llm.py  skills.py  tasks.py
backend/app/services/: artifact_store.py  autonomous_life.py  canary_allocator.py  event_bus.py  model_router.py  pipeline.py  shadow_replay.py  skill_registry.py
backend/app/services/agents/: queen.py  scout.py  worker.py  worm.py
backend/scripts/: hardening_check.py  rollback_drill.py
backend/tests/: conftest.py  test_audit_and_report.py  test_auto_feedback.py  test_auto_promote.py  test_cors_preflight.py  test_evolution_policy.py  test_llm_console.py  test_model_router.py  test_p0_hardening.py  test_scout_pheromone.py  test_self_evolution_guard.py  test_shadow_canary.py  test_swarm_and_factory.py  test_task_flow.py
backend/worker/: celery_app.py  tasks.py
desktop/: README.md  README.zh-CN.md  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: architecture.md  quickstart.zh-CN.md
(+21 files in other folders)
