[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beeagi-backend"
version = "0.1.0"
description = "BeeAGI private control plane"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
